updated one line to ensure entire placeholder sentence is visible at 320px

--- a/src/styles/_Instructions.scss
+++ b/src/styles/_Instructions.scss
@@ -59,7 +59,7 @@
 
 .userWishInput textarea {
     margin: 40px 0;
-    padding: 20px;
+    padding: 20px 15px;
     width: 100%;
     resize: none;
     border: 1px solid $fontPrimary;
